// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Indexes /> should render 1`] = `
<div>
  <Connect(ReferenceDetailHeader) />
  <Connect(ReferenceDetailTabs) />
  <Connect(RebuildAlert) />
  <Connect(RebuildIndex) />
  <ScrollList
    documents={
      Array [
        Object {
          "id": "foo",
        },
        Object {
          "id": "bar",
        },
      ]
    }
    onLoadNextPage={[Function]}
    renderRow={[Function]}
  />
</div>
`;

exports[`<Indexes /> should render with [documents=null] 1`] = `<LoadingPlaceholder />`;

exports[`<Indexes /> should render with empty documents array 1`] = `
<div>
  <Connect(ReferenceDetailHeader) />
  <Connect(ReferenceDetailTabs) />
  <Connect(RebuildAlert) />
  <Connect(RebuildIndex) />
  <NoneFound
    noun="indexes"
  />
  <ScrollList
    documents={Array []}
    onLoadNextPage={[Function]}
    renderRow={[Function]}
  />
</div>
`;
